k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: liquibase-ui
  labels:
    name: liquibase-ui
